# For_IT_Academy

./: BD.db  README.md  bot.py  pyproject.toml  requirements.txt
project/: db.sqlite3
project/main/: models.py  urls.py  views.py
project/main/migrations/: 0001_initial.py  0002_alter_post_content_alter_post_cost_alter_post_name_and_more.py  0003_remove_post_name_post_car_brand_post_car_model_and_more.py  0004_tag_post_tag.py  0005_remove_post_tag_tag_tag.py  0006_remove_tag_tag_post_tag.py  0007_remove_post_tag_delete_tag.py  0008_tag_post_tag.py  0009_remove_post_tag_delete_tag.py  0010_tag_post_tag.py  0011_remove_post_tag_post_tag.py  0012_remove_post_tag_post_tag.py  0013_remove_post_tag_tag_tag.py  0014_remove_tag_tag_post_tag.py
project/main/templates/main/: all_post.html  base.html  create_post.html  delete.html  detail.html  enter.html  hello.html  my_post.html  my_post_delete.html  my_post_list.html  profile.html  register.html  update.html  update_profile.html  user_or_guest.html
project/project/: settings.py  urls.py
