[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Vladislav Yurenya <228322fsa@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
black = "^23.1.0"
flake8 = "^6.0.0"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
